Init players at match startup